[package]
name = "vraftls-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vraftls-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true }
dashmap = { workspace = true }
