[package]
name = "vraftls-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vraftls-core = { workspace = true }
vraftls-raft = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hashring = { workspace = true }
dashmap = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
