[package]
name = "vraftls-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vraftls-core = { workspace = true }
vraftls-vfs = { workspace = true }
tower-lsp = { workspace = true }
lsp-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
