[package]
name = "vraftls-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vraftls-node"
path = "src/main.rs"

[dependencies]
vraftls-core = { workspace = true }
vraftls-raft = { workspace = true }
vraftls-vfs = { workspace = true }
vraftls-cache = { workspace = true }
vraftls-cluster = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
