[package]
name = "vraftls-raft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vraftls-core = { workspace = true }
vraftls-vfs = { workspace = true }
openraft = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rocksdb = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
